--- a/index.html
+++ b/index.html
@@ -13,48 +13,50 @@
     }
     html,body{margin:0; background:var(--bg); color:var(--ink); font-family:'Pretendard',system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
     .container{max-width:1100px; margin:0 auto; padding:0 16px}
-
-    /* spacing & typography */
-    section{padding:72px 0}
-    h1{margin:0 0 12px; font-size:2.4rem; font-weight:900; letter-spacing:-.02em; line-height:1.25}
+    section{padding:64px 0}
+    h1{margin:0 0 10px; font-size:2.4rem; font-weight:900; letter-spacing:-.02em; line-height:1.25}
+    h2{margin:0 0 26px; font-size:1.5rem; font-weight:900; letter-spacing:-.01em; text-align:center}
     p{margin:0; color:var(--sub); line-height:1.6}
-    .btn{display:inline-block; padding:12px 20px; border-radius:10px; font-weight:700; text-decoration:none; transition:.2s}
+
+    .btn{display:inline-block; padding:12px 18px; border-radius:10px; font-weight:700; text-decoration:none; transition:.2s}
     .btn.primary{background:var(--brand); color:#fff}
     .btn.primary:hover{filter:saturate(110%) brightness(.98)}
     .btn.secondary{border:2px solid var(--brand); color:var(--brand); background:#fff}
     .btn.secondary:hover{background:#f3fffb}
     .badge{display:inline-flex; gap:8px; align-items:center; padding:8px 12px; border-radius:999px; font-size:.9rem; font-weight:700; background:#e8fff6; color:#046e54; border:1px solid #bff3e1}
 
-    /* HERO (one column, compact) */
-    .hero{background:#fff}
-    .hero .cta{margin-top:18px; display:flex; gap:10px; flex-wrap:wrap}
-    .hero .micro{margin-top:10px; color:var(--muted); font-size:.95rem}
-    .hero .chips{margin-top:18px; display:flex; gap:8px; flex-wrap:wrap}
+    /* HERO (compact, one column) */
+    .hero{background:#fff; padding:72px 0}
+    .hero .cta{margin-top:16px; display:flex; gap:10px; flex-wrap:wrap}
+    .hero .chips{margin-top:14px; display:flex; gap:8px; flex-wrap:wrap}
     .chip{border:1px solid var(--line); background:#fff; padding:8px 12px; border-radius:999px; font-weight:700; font-size:.9rem}
+    .hero .micro{margin-top:10px; color:var(--muted); font-size:.95rem}
 
-    /* VALUE STRIP (one band, 4 compact items) */
-    .values{background:#f8faf9; border-top:1px solid var(--line); border-bottom:1px solid var(--line)}
-    .val-grid{display:grid; grid-template-columns:repeat(4,1fr); gap:12px}
-    .val{background:var(--card); border:1px solid var(--line); border-radius:12px; padding:18px; display:flex; align-items:center; gap:10px; font-weight:800}
-    .val i{font-style:normal; font-size:1.25rem}
-    .val small{display:block; font-weight:600; color:var(--sub); font-size:.9rem}
+    /* BLOCKS (운영철학 / 핵심가치 / 시스템) */
+    .band{background:#fff; border-top:1px solid var(--line); border-bottom:1px solid var(--line)}
+    .cards{display:grid; grid-template-columns:repeat(3,1fr); gap:14px}
+    .card{background:var(--card); border:1px solid var(--line); border-radius:12px; padding:18px; display:flex; gap:10px; align-items:flex-start; transition:.2s}
+    .card:hover{transform:translateY(-2px); box-shadow:0 8px 20px rgba(0,0,0,.06)}
+    .card i{font-style:normal; font-size:1.1rem}
+    .card b{display:block; font-size:1.05rem; margin-bottom:4px}
+    .card small{color:var(--sub)}
 
-    /* PROJECTS (keep data + just polish cards) */
-    .projects h2{margin:0 0 16px; font-size:1.4rem; font-weight:900; letter-spacing:-.01em}
+    /* PROJECTS (원본 데이터 연동 유지, 시각만 보정) */
+    .projects h2{margin-bottom:16px}
     .grid{display:grid; grid-template-columns:repeat(auto-fill,minmax(260px,1fr)); gap:16px}
-    .card{background:#fff; border:1px solid var(--line); border-radius:12px; padding:14px; transition:.2s}
-    .card:hover{transform:translateY(-2px); box-shadow:0 6px 16px rgba(0,0,0,.06)}
-    .card img{width:100%; height:168px; object-fit:cover; border-radius:10px}
-    .card h3{margin:8px 0 4px; font-size:1.03rem}
+    .project-card{background:#fff; border:1px solid var(--line); border-radius:12px; padding:14px; transition:.2s}
+    .project-card:hover{transform:translateY(-2px); box-shadow:0 6px 16px rgba(0,0,0,.06)}
+    .project-card img{width:100%; height:168px; object-fit:cover; border-radius:10px}
+    .project-card h3{margin:8px 0 4px; font-size:1.03rem}
     .muted{color:var(--muted); font-size:.9rem}
 
     @media (max-width:900px){
-      .val-grid{grid-template-columns:repeat(2,1fr)}
+      .cards{grid-template-columns:1fr 1fr}
     }
     @media (max-width:560px){
+      section{padding:52px 0}
       h1{font-size:2rem}
-      section{padding:56px 0}
-      .val-grid{grid-template-columns:1fr}
+      .cards{grid-template-columns:1fr}
     }
   </style>
 </head>
@@ -70,7 +72,7 @@
       <p>Project.PAW는 <b>구조자(개인) ↔ 후원자(개인)</b>을 바로 연결합니다. 단순하고 투명하게.</p>
       <div class="chips">
         <span class="chip">개인 ↔ 개인 직연결</span>
-        <span class="chip">구조자 30% 부담 원칙</span>
+        <span class="chip">구조자 30% 부담</span>
         <span class="chip">기부금 100% 전달</span>
       </div>
       <div class="cta">
@@ -81,13 +83,39 @@
     </div>
   </section>
 
-  <!-- VALUE STRIP (압축 정보, 한 밴드) -->
-  <section class="values">
-    <div class="container val-grid">
-      <div class="val"><i>🔗</i>개인 간 연결<small>단체 통로 없이 바로</small></div>
-      <div class="val"><i>🔒</i>책임 설계<small>구조자 30% 부담</small></div>
-      <div class="val"><i>🏥</i>Direct 결제(준비)<small>병원으로 바로 결제</small></div>
-      <div class="val"><i>🤝</i>100% 전달<small>수수료는 플랫폼 부담</small></div>
+  <!-- BLOCK 1: 운영철학 -->
+  <section class="band">
+    <div class="container">
+      <h2>운영철학</h2>
+      <div class="cards">
+        <div class="card"><i>🔗</i><div><b>직접 연결</b><small>단체 통로 없이 개인 ↔ 개인으로 빠르게</small></div></div>
+        <div class="card"><i>🧭</i><div><b>책임 기반</b><small>도덕적 해이 방지를 위한 구조자 30% 부담</small></div></div>
+        <div class="card"><i>🔍</i><div><b>투명 우선</b><small>사진·영수증으로 흐름을 명확히</small></div></div>
+      </div>
+    </div>
+  </section>
+
+  <!-- BLOCK 2: 핵심가치 -->
+  <section class="band">
+    <div class="container">
+      <h2>핵심가치</h2>
+      <div class="cards">
+        <div class="card"><i>⚡</i><div><b>실행</b><small>망설임 대신 행동으로 이어지게</small></div></div>
+        <div class="card"><i>🤝</i><div><b>신뢰</b><small>과정이 보이는 구조·후원</small></div></div>
+        <div class="card"><i>🌱</i><div><b>확장성</b><small>동물에서 시작해 사람까지 닿는 연결</small></div></div>
+      </div>
+    </div>
+  </section>
+
+  <!-- BLOCK 3: 시스템 -->
+  <section class="band">
+    <div class="container">
+      <h2>시스템</h2>
+      <div class="cards">
+        <div class="card"><i>💬</i><div><b>지금</b><small>Beta · 카톡방에서 모금 운영</small></div></div>
+        <div class="card"><i>🏥</i><div><b>곧</b><small>동물병원 Direct 결제 도입 준비</small></div></div>
+        <div class="card"><i>💯</i><div><b>원칙</b><small>기부금 100% 전달 · 수수료는 플랫폼 부담</small></div></div>
+      </div>
     </div>
   </section>
 
@@ -130,7 +158,7 @@
           return;
         }
         $grid.innerHTML = list.map(p => `
-          <a class="card" href="project.html?id=${encodeURIComponent(p.id)}">
+          <a class="project-card" href="project.html?id=${encodeURIComponent(p.id)}">
             <img src="${cover(p)}" alt=""/>
             <h3>${p.name ?? '(이름 없음)'}</h3>
             <div class="muted">${p.summary ?? ''}</div>
