--- a/index.html
+++ b/index.html
@@ -9,13 +9,51 @@
   <style>
     :root{
       --ink:#111; --sub:#444; --muted:#777; --line:#eaeaea;
-      --bg:#fafafa; --card:#fff; --brand:#00C896;
+      --bg:#fafafa; --card:#fff; --brand:#00C896; --ok:#0ea765; --no:#9ca3af;
     }
     html,body{margin:0; background:var(--bg); color:var(--ink); font-family:'Pretendard',system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
     .container{max-width:1100px; margin:0 auto; padding:0 16px}
     section{padding:60px 0}
+    h1{margin:0 0 12px; font-size:2.8rem; font-weight:900; letter-spacing:-.02em; line-height:1.2}
     h2{margin:0 0 22px; font-size:1.4rem; font-weight:900; letter-spacing:-.01em; text-align:center}
-    p{margin:0; color:var(--sub); line-height:1.6}
+    p{margin:0; color:var(--sub); line-height:1.65}
+
+    /* Buttons (for dock & inline) */
+    .btn{display:inline-block; padding:12px 18px; border-radius:10px; font-weight:700; text-decoration:none; transition:.2s}
+    .btn.primary{background:var(--brand); color:#fff}
+    .btn.primary:hover{filter:saturate(110%) brightness(.98)}
+    .btn.secondary{border:2px solid var(--brand); color:var(--brand); background:#fff}
+    .btn.secondary:hover{background:#f3fffb}
+
+    /* Floating CTA (오른쪽 고정) */
+    .cta-dock{
+      position:fixed; right:22px; top:50%; transform:translateY(-50%);
+      display:flex; flex-direction:column; gap:10px; z-index:60;
+      filter:drop-shadow(0 8px 16px rgba(0,0,0,.12));
+    }
+    @media (max-width:1024px){
+      .cta-dock{top:auto; bottom:16px; transform:none; right:16px; flex-direction:row}
+    }
+
+    /* HERO PRO (차별화 강조) */
+    .hero-pro{background:#fff; padding:56px 0; border-bottom:1px solid var(--line)}
+    .hero-grid{display:grid; grid-template-columns:1.3fr .9fr; gap:28px; align-items:start}
+    .lead{font-size:1.15rem; color:var(--sub)}
+    .pills{margin-top:14px; display:flex; gap:8px; flex-wrap:wrap}
+    .pill{border:1px solid var(--line); background:#fff; padding:8px 12px; border-radius:999px; font-weight:700; font-size:.92rem}
+
+    .comp-card{
+      background:var(--card); border:1px solid var(--line); border-radius:14px; padding:18px;
+      box-shadow:0 8px 22px rgba(0,0,0,.06)
+    }
+    .comp-head{font-weight:900; margin-bottom:10px; font-size:1.05rem}
+    .comp-row{display:grid; grid-template-columns:1.2fr .9fr .9fr; gap:10px; padding:10px 0; border-top:1px dashed #edf1f5; align-items:center}
+    .comp-row:first-of-type{border-top:none; padding-top:0}
+    .comp-label{color:#222; font-weight:800; font-size:.96rem}
+    .comp-col{display:flex; gap:8px; align-items:center; font-size:.95rem; color:var(--sub)}
+    .ok{color:var(--ok); font-weight:800}
+    .no{color:var(--no); font-weight:700}
+    .legend{margin-top:10px; font-size:.88rem; color:var(--muted)}
 
     /* TRIPLE BAND (운영철학/핵심가치/시스템 한 섹션) */
     .triple{background:#fff; border-top:1px solid var(--line); border-bottom:1px solid var(--line)}
@@ -38,27 +76,15 @@
     .project-card h3{margin:8px 0 4px; font-size:1.03rem}
     .muted{color:var(--muted); font-size:.9rem}
 
-    /* SCROLLING CTA (오른쪽 고정) */
-    .cta-dock{
-      position:fixed; right:22px; top:50%; transform:translateY(-50%);
-      display:flex; flex-direction:column; gap:10px; z-index:60;
-      filter:drop-shadow(0 8px 16px rgba(0,0,0,.12));
-    }
-    .btn{display:inline-block; padding:12px 18px; border-radius:10px; font-weight:700; text-decoration:none; transition:.2s}
-    .btn.primary{background:var(--brand); color:#fff}
-    .btn.primary:hover{filter:saturate(110%) brightness(.98)}
-    .btn.secondary{border:2px solid var(--brand); color:var(--brand); background:#fff}
-    .btn.secondary:hover{background:#f3fffb}
-
     /* Responsive */
-    @media (max-width:1024px){
-      .cta-dock{top:auto; bottom:16px; transform:none; right:16px; flex-direction:row}
-    }
-    @media (max-width:900px){
-      .triple-grid{grid-template-columns:1fr 1fr}
+    @media (max-width:980px){
+      .hero-grid{grid-template-columns:1fr}
+      .comp-row{grid-template-columns:1fr 1fr; grid-template-areas:"label label" "old new"}
+      .comp-label{grid-area:label}
     }
     @media (max-width:560px){
       section{padding:48px 0}
+      h1{font-size:2.2rem}
       .triple-grid{grid-template-columns:1fr}
     }
   </style>
@@ -67,11 +93,53 @@
   <!-- header include (원본 유지) -->
   <div data-include="header"></div>
 
-  <!-- RIGHT FLOATING CTA (스크롤 따라오는 버튼) -->
+  <!-- RIGHT FLOATING CTA (스크롤 따라오는 버튼, 원본 유지) -->
   <div class="cta-dock" aria-label="빠른 참여">
     <a href="project_list.html" class="btn primary">지금 구조자 만나보기</a>
     <a href="create.html" class="btn secondary">등록하기</a>
   </div>
+
+  <!-- HERO PRO: 임팩트 + 차별화 -->
+  <section class="hero-pro">
+    <div class="container hero-grid">
+      <div>
+        <h1>법인 없이, 개인↔개인.<br/>후원은 직진이어야 합니다.</h1>
+        <p class="lead">Project.PAW — 빠른 실행 · 투명한 흐름 · 책임 있는 설계.</p>
+        <div class="pills">
+          <span class="pill">직접 연결</span>
+          <span class="pill">기부금 100% 전달</span>
+          <span class="pill">구조자 30% 부담</span>
+          <span class="pill">병원 Direct(준비)</span>
+        </div>
+      </div>
+
+      <!-- 차별화 비교 카드 -->
+      <aside class="comp-card" aria-label="기존 플랫폼과의 차이">
+        <div class="comp-head">Compared</div>
+        <div class="comp-row">
+          <div class="comp-label">연결 방식</div>
+          <div class="comp-col"><span class="no">기존</span> 단체 경유</div>
+          <div class="comp-col"><span class="ok">PAW</span> 개인↔개인 직연결</div>
+        </div>
+        <div class="comp-row">
+          <div class="comp-label">전달 구조</div>
+          <div class="comp-col"><span class="no">기존</span> 일부 공제</div>
+          <div class="comp-col"><span class="ok">PAW</span> 기부금 100% 전달</div>
+        </div>
+        <div class="comp-row">
+          <div class="comp-label">책임 설계</div>
+          <div class="comp-col"><span class="no">기존</span> 기본 규정 위주</div>
+          <div class="comp-col"><span class="ok">PAW</span> 구조자 30% 부담</div>
+        </div>
+        <div class="comp-row">
+          <div class="comp-label">결제 흐름</div>
+          <div class="comp-col"><span class="no">기존</span> 단체→병원</div>
+          <div class="comp-col"><span class="ok">PAW</span> 병원 Direct(준비)</div>
+        </div>
+        <div class="legend">* 현재 Beta — 카톡방 모금 운영. 결제(PG) 연동 예정.</div>
+      </aside>
+    </div>
+  </section>
 
   <!-- TRIPLE BAND: 운영철학 / 핵심가치 / 시스템 -->
   <section class="triple">
